Automatically add `junit-platform-launcher` (#1166)
* Automatically add `junit-platform-launcher`

Older Gradle releases used to add this dependency automatically. Since
Gradle 8, this is no longer the case (see https://docs.gradle.org/8.12/userguide/upgrading_version_8.html#manually_declaring_dependencies).

However, Native Build Tools used to leak this dependency, which caused
other issues like duplicate entries on classpath. Since we upgraded to
0.11.1, this is no longer the case.

Therefore, users who upgrade may see an error if they don't add this
dependency explicitly. To workaround this and make transition smoother,
we're adding the dependency back implicitly.

* Fix launcher package